src/main/java/com/example/dnd_13th_9_be/global/error/JwtAuthenticationException.java
package com.example.dnd_13th_9_be.global.error;

import org.springframework.security.core.AuthenticationException;

public class JwtAuthenticationException extends AuthenticationException {
    public JwtAuthenticationException(String message) {
        super(message);
    }

    public JwtAuthenticationException(String message, Throwable cause) {
        super(message, cause);
    }
}
